refactor: simplify duel winner retrieval and improve immutability with List.of()